# portal-engine

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  main  portal_engine.cbp  requirements.txt
CMake/: FindSOIL.cmake
include/: Texture.h  camera.h  controls.h  drawable.h  entity.h  game.h  light_source.h  mesh.h  model.h  portal.h  portal_gun.h  portals-draw-temp.h  primitives.h  puzzle.h  scene.h  settings.h  shader-loader.h  shader.h  window.h
include/SceneObjects/: cube.h  plane.h  portal.h  pyramid.h  triangle.h
include/primitives/: cube.h
libs/: CMakeLists.txt
res/Portal/: portal.fragment  portal.vertex
res/Triangle/: triangle.vertex
res/models/car/3D Models/: Audi_R8_2017.mtl
res/models/eye/: eyeball.mtl
res/models/flat/: CobbleStones.mtl
res/shaders/: color.fragment  color.vertex  depth.fragment  depth.vertex  fancy.fragment  fancy.vertex  light.fragment  light.vertex  temp.fragment  temp.fragmentshader  temp.vertex  texture.fragment  texture.vertex
res/shaders/light_source_shaders/: light_source.fragment  light_source.vertex
src/: Texture.cpp  camera.cpp  controls.cpp  drawable.cpp  entity.cpp  game.cpp  light_source.cpp  main.cpp  mesh.cpp  model.cpp  portal.cpp  portal_gun.cpp  portals-draw-temp.cpp  primitives.cpp  puzzle.cpp  scene.cpp  shader-loader.cpp  shader.cpp  window.cpp
src/SceneObjects/: cube.cpp  plane.cpp  portal.cpp  pyramid.cpp  triangle.cpp
src/primitives/: cube.cpp
workflows/: .travis.yml
